2008-11-09  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-orphan): New.
	(tinydebian-bts-mail-type-remove): New.
	(tinydebian-package-parse-info-all): Parse 'Description' field
	into two.
	(tinydebian-package-read-field-content-1): Use
	`match-string-no-properties'.
	(tinydebian-package-status-apt-cache): Check that apt-cache
	exists
	(tinydebian-package-status-description-1): New.

2008-11-06  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-:rfs-template): Adjust docstring.

2008-11-03  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-ita): Fix indent.
	(tinydebian-bts-mail-type-itp): Fix indent.
	(tinydebian-:wnpp-template-licenses-alist): Update.

2008-11-02  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-reopen): New.
	(tinydebian-bts-mail-ctrl-command-retitle): Use Subject: as
	default input string.

2008-11-01  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-email-compose-1): New.
	(tinydebian-bts-email-compose): Add arg BUG.
	(tinydebian-mail-mode-debian-address-close-toggle): New.
	(tinydebian-mail-mode-debian-address-ask-args): New.
	(tinydebian-mail-mode-debian-address-quiet-toggle): Rewritten.
	(tinydebian-mail-mode-debian-address-control-toggle): Rewritten.
	(tinydebian-mail-mode-debian-address-submitter-toggle): Rewritten.
	(tinydebian-mail-mode-debian-address-maintonly-toggle): Rewritten.
	(tinydebian-mail-mode): Prepare for control messages.
	(tinydebian-mail-mode-debian-address-tag-toggle): Rewritten.
	(tinydebian-mail-mode-debian-address-add-standard-bug): New.
	(tinydebian-mail-mode-debian-address-tag-add): New.
	(tinydebian-mail-mode-debian-address-manipulate): New.
	(tinydebian-bts-email-compose): Rewritten.
	(tinydebian-bts-email-compose-1): New lowlevel function.
	(tinydebian-bts-mail-ctrl-fixed): Support `tinydebian-:novice-mode'.